# ar-router

./: .gitignore  Cargo.toml  Dockerfile  ar-router.toml  build.rs  package-lock.json  package.json
assets/: ios_open_automatically.js  style.css
src/: ar_configs.rs  main.rs  templates.rs  user_agent.rs
templates/: index.html  ios_banner.html
