[package]
name = "ar-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["macros"] }
axum-macros = "0.4.1"
axum-embed = "0.1.0"
rust-embed = "8.2.0"
tokio = { version = "1", features = ["full"] }
user-agent-parser = "0.3.6"
async-trait = "0.1.77"
serde = { version = "1.0.195", features = ["derive"] }
confy = "0.6.0"
toml = "0.8.8"
log = "0.4.20"
env_logger = { version = "0.11.0", features = [] }
